# FACILIS

./: CMakeLists.txt  Makefile  README.md
examples/: main.cpp
include/: core.hpp  facilis.hpp  files.hpp  ui.hpp
src/: test.txt
